--- a/static/henri.css
+++ b/static/henri.css
@@ -7,7 +7,7 @@
     --color-dark-footer: #202024;
     --color-dark-navbar: #202024;
     --color-text-logo: #FFCC33;
-    --color-text-input: #BDBDBD;
+    --color-text-input: #F2F2F2;
     --color-text-navbar: #BDBDBD;
     --color-text-footer: #BDBDBD;
     --color-thunder: #FFCC33;
